--- a/public/frontend/themes/default/assets/css/app.less
+++ b/public/frontend/themes/default/assets/css/app.less
@@ -9,7 +9,10 @@
 @import "icons.less";
 
 // Core CSS
+@import "scaffolding.less";
 @import "grid.less";
+@import "type.less";
+
 
 // Components
 @import "header.less";
