--- a/public/frontend/themes/default/assets/css/header.less
+++ b/public/frontend/themes/default/assets/css/header.less
@@ -1,7 +1,7 @@
 .global-nav__header {
     background: #212a34;
     position: relative;
-    font-family: Roboto, sans-serif
+    font-family: @font-family-sans-serif;
 }
 .global-nav__header-content {
     -webkit-box-pack: justify;
