--- a/public/frontend/themes/default/assets/css/mixins.less
+++ b/public/frontend/themes/default/assets/css/mixins.less
@@ -3,9 +3,16 @@
 
 // Utilities
 @import "mixins/opacity.less";
+@import "mixins/image.less";
+@import "mixins/text-emphasis.less";
+@import "mixins/text-overflow.less";
+@import "mixins/tab-focus.less";
+@import "mixins/vendor-prefixes.less";
 
 // skins
+@import "mixins/background-variant.less";
 @import "mixins/border-radius.less";
+
 
 // Components
 
