--- a/public/frontend/themes/default/assets/css/header.less
+++ b/public/frontend/themes/default/assets/css/header.less
@@ -839,7 +839,7 @@
     border-right: 6px solid transparent;
     border-bottom: 6px solid #fff;
     top: -6px;
-    right: 88px;
+    right: 56px;
 }
 // NOTE: we'll assign one colot for each topic (Cong)
 .courses-menu__topic-link:hover {
@@ -910,15 +910,15 @@
     position: absolute;
     top: 100%;
     z-index: 10;
-    display: none;
+    display: none; 
     float: right;
-    right: -88px;
+    right: -56px;
     padding: 0;
     background: #fff;
     background-color: #fff;
     border: 1px solid #e1e8ed;
-    border: 0 solid rgba(0,0,0,0.25);
-    box-shadow: 0 1px 4px rgba(0,0,0,0.25);
+    border: 0 solid rgba(0,0,0,.25);
+    box-shadow: 0 1px 4px rgba(0,0,0,.25);
     background-clip: padding-box;
 }
 .courses-menu__topics li:first-child a {
@@ -935,7 +935,7 @@
 .courses-menu__topic-link {
     position: relative;
     display: inline-block;
-    width: 190px;
+    width: 160px;
     font: normal 14px/20px @font-family-sans-serif;
     white-space: nowrap;
     color: #3a3a3a;
